# auspex

./: .dockerignore  .env  .gcloudignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cloudbuild.gitlab-trigger.yaml  cloudbuild.yaml  docker-compose.yml  mypy.ini
.build/: deploy_scanner.sh
.github/workflows/: ci.yml
.scripts/: build.sh  scan.sh  test.sh  update.sh
auspex_core/: pyproject.toml
auspex_core copy/tests/: test_core.py
auspex_core/auspex_core/models/: pdf.py
auspex_core/tests/: test_core.py
core/: README.rst  pyproject.toml
core/auspex_core/: __init__.py
core/auspex_core/docker/: __init__.py  exceptions.py  models.py  registry.py
core/auspex_core/exceptions/: __init__.py  base.py  firestore.py
core/auspex_core/gcp/: auth.py  env.py  firestore.py  gcr.py  storage.py  utils.py
core/auspex_core/models/: __init__.py  cve.py  gcr.py  scan.py  status.py  validators.py
core/auspex_core/models/api/: __init__.py  base.py  report.py  scan.py
core/auspex_core/utils/: __init__.py  backoff.py  time.py
core/tests/: conftest.py  test_core.py  test_utils.py
core/tests/gcp/: test_firestore.py  test_storage.py
core/tests/models/: test_auth.py  test_cve.py
functions/logger/: main.py  pyproject.toml  requirements.txt
functions/logger/azure/: README.md
functions/logger/gcp/: .env.yaml  README.md  build.sh  conftest.py  main.py  pyproject.toml  requirements.txt  test_main_unit.py  test_main_unit_mock.py
reporter/: Dockerfile  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
reporter/reporter/: _mock.py  _types.py  config.py  cve.py  db.py  exceptions.py  main.py  models.py  report.py
reporter/reporter/backends/: __init__.py  aggregate.py  cve.py  shared.py
reporter/reporter/backends/snyk/: __init__.py  aggregate.py  model.py
reporter/reporter/frontends/: __init__.py
reporter/reporter/frontends/latex/: __init__.py  latex.py  table.py  tables.py  utils.py
reporter/reporter/frontends/shared/: format.py  models.py  plots.py  statistics.py  tables.py  vulnerabilities.py
reporter/reporter/frontends/shared/models/: __init__.py  common.py  plot.py  table.py
reporter/reporter/types/: __init__.py  cvss.py  nptypes.py  protocols.py
reporter/reporter/utils/: __init__.py  firestore.py  matplotlib.py  npmath.py  storage.py  types.py
reporter/tests/: conftest.py  strategies.py  test_app.py  test_cve.py  test_protocols.py  test_shared.py  test_utils.py
reporter/tests/frontends/: __init__.py  test_frontends.py
reporter/tests/frontends/shared/: test_tables.py
reporter/tests/snyk/: test_aggregate.py  test_model.py
restapi/: Dockerfile  Dockerfile.oldstyle  __main.py  cloudbuild.yaml  docker-entrypoint.sh  pyproject.toml
restapi/restapi/: __init__.py  config.py  db.py  exceptions.py  main.py  models.py  policy.py  status.py
restapi/restapi/routes/: __init__.py  reports.py  scans.py  status.py
restapi/restapi/workflows/: README.md  __init__.py  base.py  pdf.py  scan.py  utils.py
restapi/restapi/workflows/azure/: runner.py
restapi/restapi/workflows/gcp/: __init__.py  pdf.py  runner.py  utils.py
restapi/tests/: test_models.py  test_restapi.py  test_status.py
scanner/: Dockerfile  Dockerfile.alpine  cloudbuild.yaml  entrypoint.sh  main.py  pyproject.toml  test.py
scanner/scanner/: __init__.py  __main__.py  config.py  containerregistry.py  db.py  docker.py  exceptions.py  gcr.py  health.py  main.py  models.py  scan.py  types.py
scanner/scanner/backends/: __init__.py  snyk.py
scanner/tests/: conftest.py  test_integration_snyk.py  test_scanner.py
scanner/tests/backends/: test_snyk.py
scanner_snyk/: Dockerfile  cloudbuild.yaml  config.yaml  entrypoint.sh  pyproject.toml  setupauth.sh  test.py
scanner_snyk/scanner_snyk/: config.py  exceptions.py  health.py  main.py  models.py  scan.py  storage.py  utils.py
scanner_snyk/scanner_snyk/backends/: __init__.py
scanner_snyk/tests/: _test_main_unit.py  test_scanner.py
scanner_snyk/tests/backends/: test_snyk.py
setup/: Dockerfile  cloudbuild.yaml  firestore_init.py  main.py  pyproject.toml  storage_init.py
setup/setup/: config.py  firestore.py  storage.py  utils.py
workflows/: mailreport.yaml
