[tool.poetry]
name = "auspex-core"
version = "0.1.0"
description = ""
authors = [
    "Peder Hovdan Andresen <pedeha@stud.ntnu.no>",
    "Patrick Eilert Krosby <patricek@stud.ntnu.no>",
    "Anders Westby <anderscw@stud.ntnu.no>",
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
