[tool.poetry]
name = "auspex-core"
version = "0.1.5"
description = ""
authors = [
    "Peder Hovdan Andresen <pedeha@stud.ntnu.no>",
    "Patrick Eilert Krosby <patricek@stud.ntnu.no>",
    "Anders Westby <anderscw@stud.ntnu.no>",
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
firebase-admin = "^5.2.0"
loguru = "^0.6.0"
google-cloud-storage = "^2.1.0"
gcloud-aio-storage = "^6.3.0"
aiofiles = "^0.8.0"
httpx = "^0.22.0"
sanitize-filename = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
poethepoet = "^0.13.1"
pytest-cov = "^3.0.0"
pytest = "7.1.1"
hypothesis = "^6.40.2"
pre-commit = "^2.18.1"

[tool.poe.tasks]
test = "pytest"
testcov = "pytest --cov=auspex_core"
testcov100 = { shell = "poe test  | grep -v '100%'" }
testhtml = { shell = "poe testcov --cov-report html:cov_html" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
