[tool.poetry]
name = "scanner"
version = "0.1.0"
description = ""
authors = [
    "Peder Hovdan Andresen <pedeha@stud.ntnu.no>",
    "Patrick Eilert Krosby <patricek@stud.ntnu.no>",
    "Anders Westby <anderscw@stud.ntnu.no>",
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
fastapi = "^0.73.0"
uvicorn = { extras = ["standard"], version = "^0.17.0" }
sanitize-filename = "^1.2.0"
docker = "^5.0.3"
auspex-core = { path = "../auspex_core", develop = true }
loguru = "^0.6.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
