[tool.poetry]
name = "logger"
version = "0.1.0"
description = ""
authors = ["Peder Hovdan Andresen <pedeha@stud.ntnu.no>"]

[tool.poetry.dependencies]
python = "^3.10"
google-cloud = ">=0.34.0"
firebase-admin = "^5.2.0"
google-cloud-storage = "^2.1.0"
sanitize-filename = "^1.2.0"
functions-framework = "^3.0.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^22.1.0"
Flask = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
